--- a/urzadzenia-peryferyjne/lab3/spr/lab3.tex
+++ b/urzadzenia-peryferyjne/lab3/spr/lab3.tex
@@ -40,7 +40,7 @@
 
 \section{Cel laboratorium}
 \paragraph{}
-Celem laboratorium było zapoznanie się z działaniem silnika krokowego
+Celem laboratorium było zapoznanie się z działaniem unipolarnego silnika krokowego
 oraz sterowanie nim z komputera poprzez port szeregowy RS232.
 
 \section{Działanie silnika krokowego}
