--- a/urzadzenia-peryferyjne/lab3/spr/lab3.tex
+++ b/urzadzenia-peryferyjne/lab3/spr/lab3.tex
@@ -23,7 +23,7 @@
     \normalsize \@author\par \normalsize
     \vspace{3cm}
     \textit{\small Prowadzący:}\par
-    Dr inø. Jacek Mazurkiewicz \par
+    Dr inż. Jacek Mazurkiewicz \par
     \vspace{2cm}
     Wydział Elektroniki\\ III rok\\ Pn 8.15 - 11.00\par
     \vspace{4cm}
