--- a/technologie-sieciowe-laboratorium/lab2/lab2.tex
+++ b/technologie-sieciowe-laboratorium/lab2/lab2.tex
@@ -23,7 +23,7 @@
     \normalsize \@author\par \normalsize
     \vspace{3cm}
     \textit{\small Prowadzący:}\par
-    Dr inż. Andrzej Grzybowski\par
+    Dr inż. Arkadiusz Grzybowski\par
     \vspace{2cm}
     Wydział Elektroniki\\ III rok\\ Pn TN 11.15 - 13.00\par
     \vspace{4cm}
