--- a/technologie-sieciowe-projekt/projekt.tex
+++ b/technologie-sieciowe-projekt/projekt.tex
@@ -1,5 +1,6 @@
 \documentclass[wide,a4paper,titlepage,12pt] {article}
 \usepackage{polski}
+\usepackage{float}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{slashbox}
