--- a/technologie-sieciowe-projekt/projekt.tex
+++ b/technologie-sieciowe-projekt/projekt.tex
@@ -7,6 +7,7 @@
 \usepackage[table]{xcolor}
 \usepackage{graphicx,pdflscape}
 \usepackage{placeins}
+\usepackage[final]{pdfpages}
 
 
 \title{Technologie sieciowe 2 - projekt}
